z-index fix voor hamburger

--- a/timo/scss/main.scss
+++ b/timo/scss/main.scss
@@ -300,6 +300,7 @@ $z-index-navigation-inner: $z-index-navigation-button + 25;
 	position: fixed;
 	right: 0;
 	height: 100%;
+	z-index: 2;
 }
 .menuactive {
 	right: 0;
